--- a/cesium/package.json
+++ b/cesium/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "cesium": "^1.44.0",
+    "cesium": "^1.60.0",
     "cesium-navigation": "^1.0.0",
     "cesiumvectortile": "^1.0.6",
     "echarts": "^4.4.0",
@@ -42,14 +42,11 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "cesium": "^1.40.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
-    "compression": "^1.7.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.11",
-    "element-theme-chalk": "^2.12.0",
+    "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -59,7 +56,6 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
-    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -68,7 +64,6 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -76,13 +71,9 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shapefile-stream": "0.0.4",
     "shelljs": "^0.7.6",
-    "style-loader": "^1.0.0",
-    "through2": "^2.0.3",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
@@ -92,9 +83,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-glsl-loader": "^1.0.1",
-    "webpack-merge": "^4.1.0",
-    "yargs": "^10.0.3"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
